[package]
name = "chronofold"
version = "0.2.0"

authors = ["Dominik Kellner <dkellner@dkellner.de>"]
description = "A conflict-free replicated data structure (a.k.a CRDT) for versioned text"
edition = "2018"
homepage = "https://git.sr.ht/~dkellner/chronofold"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://git.sr.ht/~dkellner/chronofold"

[dependencies]
serde = { version = "1.0.106", optional = true, features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.28"
criterion = "0.3.3"
rand = "0.7.3"
serde_json = "1.0"

[[bench]]
name = "dmonad"
harness = false
